Correções de bugs

--- a/src/main/resources/templates/comentesobre.html
+++ b/src/main/resources/templates/comentesobre.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="new">
-        <form method="POST" action="/api">
+        <form method="POST" action="/api.post">
             <input type="hidden" name="subject" th:value="${subject}" />
             <input type="text" id="mail" name="email" placeholder="Digite seu email..." />
             <textarea id="content" name="text" placeholder="Deixe seu comentário..."></textarea>
