--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comente Sobre - Erro</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <title>Comente Sobre</title>
+    <link href="./style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <div>
         <h2>Comente Sobre</h2>
     </div>
-    <h1>Ocorreu um erro, tente comentar sobre algo...</h1>
     <div id="pathToGo">
         <form method="POST" action="/api.post">
             <input type="text" name="subject" placeholder="Comente sobre..." />
