--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,11 +15,11 @@
                 <button type="button" onclick="toggleForm();"
                     class="px-4 py-1 mx-1 float-right text-sm text-indigo-600 font-semibold rounded border border-indigo-200 hover:text-white
             hover:bg-indigo-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2">
-                    Calcelar</button>
+                    <i class="mr-1 lni lni-trash-can"></i>Calcelar</button>
                 <button type="submit" text="Comentar"
                     class="px-4 py-1 mx-1 float-right text-sm text-pink-600 font-semibold rounded border border-pink-200 hover:text-white
             hover:bg-pink-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-pink-600 focus:ring-offset-2">
-                    Comentar</button>
+                    <i class="mr-1 lni lni-comments-reply"></i>Comentar</button>
             </div>
         </form>
     </div>
