--- a/src/main/resources/templates/fragments/home-header.html
+++ b/src/main/resources/templates/fragments/home-header.html
@@ -5,7 +5,8 @@
         </button>
         <form id="form" class="hidden bg-white mt-6 flex flex-col p-3 rounded w-6/12" method="POST" action="/api.post"
             onsubmit="return validate(event);">
-            <input id="subject" name="subject" class="bg-white border border-pink-300 rounded p-2 mb-4 outline-none" type="text" placeholder="Assunto...">
+            <input id="subject" name="subject" class="bg-white border border-pink-300 rounded p-2 mb-4 outline-none"
+                type="text" placeholder="Assunto...">
             <input id="email" name="email" class="bg-white border border-pink-300 rounded p-2 mb-4 outline-none"
                 spellcheck="false" placeholder="Email" type="text">
             <textarea id="content" class="bg-pink-200 p-3 border-l-2 px-1 border-pink-500 outline-none rounded"
@@ -15,11 +16,11 @@
                 <button type="button" onclick="toggleForm();"
                     class="px-4 py-1 mx-1 float-right text-sm text-indigo-600 font-semibold rounded border border-indigo-200 hover:text-white
             hover:bg-indigo-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2">
-                    Calcelar</button>
+                    <i class="mr-1 lni lni-trash-can"></i>Calcelar</button>
                 <button type="submit" text="Comentar"
                     class="px-4 py-1 mx-1 float-right text-sm text-pink-600 font-semibold rounded border border-pink-200 hover:text-white
             hover:bg-pink-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-pink-600 focus:ring-offset-2">
-                    Comentar</button>
+                    <i class="mr-1 lni lni-comments-reply"></i>Comentar</button>
             </div>
         </form>
     </div>
