--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -551,7 +551,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .w-56 {
-  width: 14rem;
+  width: 56pt;
 }
 
 .max-w-full {
