Config Cross Origin (CORS)

--- a/src/main/resources/templates/comentesobre.html
+++ b/src/main/resources/templates/comentesobre.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
   <link rel="stylesheet" href="/styles/style.css?v=1654463600358" />
 
-  <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
+  <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" crossorigin="anonymous" />
 
 </head>
 
@@ -27,7 +27,7 @@
         <!-- Photo -->
         <div class="mt-2">
           <img class="w-56 shadow rounded-full"
-            th:src="'https://avatars.dicebear.com/api/bottts/' + ${comment.email} + '.svg?r=50'" srcset="" />
+            th:src="'https://avatars.dicebear.com/api/bottts/' + ${comment.email} + '.svg?r=50'" srcset="" crossorigin="anonymous" />
         </div>
         <!-- Content -->
         <div>
