--- a/src/main/resources/templates/fragments/comment.html
+++ b/src/main/resources/templates/fragments/comment.html
@@ -1,2 +1,2 @@
-<div th:fragment="number-comment" class="mx-3 mt-8 text-pink-600 text-xl border-b-2 border-pink-200"
+<div th:fragment="number-comment" class="mx-3 mt-8 text-white text-xl border-b-2 border-pink-200"
       th:text="'Comentários (' + ${#lists.size(comments)} + ')'"></div>
