--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
     <link rel="stylesheet" href="/styles/style.css?v=1654463600358" />
 
-    <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
+    <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet"  crossorigin="anonymous" />
 
 </head>
 
